# PL-MCP

./: .gitignore  ADD-TO-EXISTING-PROJECTS.md  DEPLOYMENT_COMPLETE.md  DOCUMENTATION_INDEX.md  Dockerfile  FEATURES.md  LICENSE  README.md  VSCODE_INTEGRATION.md  add-mcp-to-project.sh  advanced_react_flow_demo.py  claude_desktop_config.json  codex-quick-setup.md  docker-compose.yml  frontend-mcp-workspace.code-workspace  install-global-mcp.sh  mcp_client.py  mcp_settings.json  pyproject.toml  react_flow_demo.py  requirements.txt  simple_mcp_client.py  start-mcp-server.sh  test_learning_tools.py  test_server.py  vscode-mcp-config.json
.giga/rules/: api-endpoints.mdc  data-models.mdc  frontend-architecture.mdc
demo-project/: package.json
demo-project/components/: MindMapDemo.tsx
docs/advanced/: AGENTS.md  REACT_FLOW_CONTEXT_TRANSFORMATION.md  mcp-context-for-copilot.md
docs/api-reference/: MCP_CONNECTION_GUIDE.md
docs/deployment/: DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md
docs/getting-started/: QUICK_START.md  README.md
docs/integration/: INTEGRATION-GUIDE.md  README-COPILOT-INTEGRATION.md  SETUP-COPILOT.md  codex-positioning-config.md
docs/project/: GIT_PUSH_SUMMARY.md  SUCCESS-SUMMARY.md
examples/: README.md
k8s/: deployment.yaml  service.yaml
src/frontend_mcp_server/: __init__.py  main.py
src/frontend_mcp_server/tools/: __init__.py  connection_positioning_tools.py  package_tools.py  react_flow_api_tools.py  react_flow_learning_tools.py  react_flow_tools_backup.py  react_flow_tools_minimal.py  react_native_tools.py  react_tools.py  tailwind_tools.py  typescript_tools.py
tests/: test_api_tools.py
