[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontend-mcp-server"
version = "1.0.0"
description = "MCP Server for Frontend Development - React, React Native, Tailwind CSS, and more"
authors = [
    {name = "Frontend MCP Team"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
    "requests>=2.28.0",
    "jsonschema>=4.17.0",
    "pydantic>=2.0.0",
    "packaging>=21.0",
    "semver>=3.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]

[project.scripts]
frontend-mcp-server = "frontend_mcp_server.main:main"

[project.urls]
Homepage = "https://github.com/your-org/frontend-mcp-server"
Repository = "https://github.com/your-org/frontend-mcp-server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true